--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,16 @@ certifi==2021.10.8
 charset-normalizer==2.0.10
 click==8.0.3
 Flask==2.0.2
+gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 pycodestyle==2.8.0
+python-dateutil==2.8.2
 python-dotenv==0.19.2
 python-telegram-bot==13.10
+python-telegram-bot-pagination==0.0.2
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 requests==2.27.1
@@ -23,4 +26,3 @@ tzdata==2021.5
 tzlocal==4.1
 urllib3==1.26.8
 Werkzeug==2.0.2
-gunicorn==20.1.0
