--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pycodestyle==2.8.0
 python-dateutil==2.8.2
 python-dotenv==0.19.2
 python-telegram-bot==13.10
+python-telegram-bot-calendar==1.0.5
 python-telegram-bot-pagination==0.0.2
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
